# partner-chains-smart-contracts

./: .envrc  .gitattributes  .gitignore  .hlint.yaml  .pre-commit-config.yaml  :  CHANGELOG.md  CODE-OF-CONDUCT.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  DATA_SERIALIZATION.md  DEVELOPMENT.md  Justfile  Makefile  NOTICE  README.md  cabal-haskell.nix.project  cabal.project  default.nix  flake.nix  haddock.yml  hie.yaml  nix-shell  package-lock.json  release.sh  shell.nix  start-deps.sh  trustless-sidechain.cabal  update-plutus.sh  update-sha256map.sh
onchain/: Makefile  QUICKCHECK.md  RawScripts.purs  STANDARDS.md  cabal.project  cabal.project.freeze  default.nix  hie.yaml  package-lock.json  partner-chains-smart-contracts.cabal  shell.nix  trustless-sidechain.cabal  weeder.toml
onchain/app/gen-signatures/: GenOutput.hs  GetOpts.hs  Main.hs
onchain/app/merkle-tree/: Main.hs
onchain/app/serialise/: Main.hs
onchain/bench/: Bench.hs  Ctl.hs  Main.hs
onchain/bench/Bench/: BenchResults.hs  Logger.hs  Monad.hs  NodeQuery.hs  OdcQuery.hs  Process.hs
onchain/bench/Cases/: FUELMintingPolicy.hs  GrowingTreeClaim.hs  InitSidechain.hs  UpdateCommitteeHash.hs
onchain/bench/quickcheck-extra-bench/: Main.hs
onchain/perf-check/: Main.hs
onchain/poc/TrustlessSidechain/: PoCAlwaysPassingScripts.hs  PoCECDSA.hs  PoCInlineDatum.hs  PoCMintingPolicy.hs  PoCReferenceInput.hs  PoCReferenceScript.hs  PoCSchnorr.hs  PoCSerialiseData.hs
onchain/prelude/TrustlessSidechain/: HaskellPrelude.hs  PlutusPrelude.hs  Prelude.hs
onchain/src/PartnerChains/: EncodeHelpers.hs  ScriptId.hs  Types.hs  Utils.hs
onchain/src/TrustlessSidechain/: AlwaysFailingScripts.hs  AlwaysPassingScripts.hs  CandidatePermissionMintingPolicy.hs  CheckpointValidator.hs  CommitteeCandidateValidator.hs  CommitteePlainATMSPolicy.hs  CommitteePlainEcdsaSecp256k1ATMSPolicy.hs  CommitteePlainSchnorrSecp256k1ATMSPolicy.hs  CommitteeSignedToken.hs  CustomScriptContext.hs  DParameter.hs  DataStorage.hs  DelegationRegistration.hs  DelegatorRegistration.hs  DistributedSet.hs  DummyMintingPolicy.hs  EncodeHelpers.hs  ExampleVFunction.hs  FUELMintingPolicy.hs  FUELProxyPolicy.hs  Foo.hs  GenericContainer.hs  GenesisUtxoCache.hs  Governance.hs  GovernedMap.hs  ICSAuthorityToken.hs  IlliquidCirculationSupply.hs  InitToken.hs  MPTRootTokenMintingPolicy.hs  MerkleRootTokenMintingPolicy.hs  MerkleRootTokenValidator.hs  MerkleTree.hs  OffChain.hs  OnlyMintMintingPolicy.hs  PermissionedCandidates.hs  PoCECDSA.hs  PoCInlineDatum.hs  PoCMintingPolicy.hs  PoCReferenceInput.hs  PoCReferenceScript.hs  (+13 more)
onchain/test/: Main.hs
onchain/test/common/: ApiBuilder.hs
onchain/test/golden/: ATMSPlainMultisignature-cbor.golden  ATMSPlainMultisignature-isdata.golden  ATMSRedeemer1-cbor.golden  ATMSRedeemer1-isdata.golden  BlockProducerRegistration-cbor.golden  BlockProducerRegistration-isdata.golden  BlockProducerRegistration.golden  BlockProducerRegistration1-cbor.golden  BlockProducerRegistration1-isdata.golden  BlockProducerRegistration2-cbor.golden  BlockProducerRegistration2-isdata.golden  BlockProducerRegistrationMsg-cbor.golden  BlockProducerRegistrationMsg-isdata.golden  BlockProducerRegistrationMsg.golden  CandidatePermissionMint-cbor.golden  CandidatePermissionMint-isdata.golden  CandidatePermissionMint.golden  CheckpointDatum-cbor.golden  CheckpointDatum-isdata.golden  CheckpointDatum.golden  CheckpointMessage-cbor.golden  CheckpointMessage-isdata.golden  CheckpointMessage.golden  CheckpointParameter-cbor.golden  CheckpointParameter-isdata.golden  CheckpointParameter.golden  CheckpointRedeemer-cbor.golden  CheckpointRedeemer-isdata.golden  CheckpointRedeemer.golden  CombinedMerkleProof-cbor.golden  CombinedMerkleProof-isdata.golden  CombinedMerkleProof.golden  CombinedMerkleProof2-cbor.golden  CombinedMerkleProof2-isdata.golden  CommitteeCertificateMint-cbor.golden  CommitteeCertificateMint-isdata.golden  DParameterValidatorDatum-cbor.golden  DParameterValidatorDatum-isdata.golden  DsConfDatum-isdata.golden  DsConfMint-isdata.golden  (+87 more)
onchain/test/perf_data/: aikenReserveValidatorHandover.json  aikenReserveValidatorTransferToICS.json  committeeCandidateValidator.json  dParamMintingPolicy-perf.json  dParamMintingPolicy.json  dParamValidatorSpending-perf.json  dParamValidatorSpending.json  governedMapPolicy-perf.json  governedMapPolicy.json  governedMapValidator-perf.json  governedMapValidator.json  icsAuthorityTokenPolicy-perf.json  icsAuthorityTokenPolicy.json  icsValidatorDeposit-perf.json  icsValidatorDeposit.json  icsValidatorWithdraw-perf.json  icsValidatorWithdraw.json  permissionedCandidatesPolicyBurn-perf.json  permissionedCandidatesPolicyBurn.json  permissionedCandidatesPolicyMint-perf.json  permissionedCandidatesPolicyMint.json  permissionedCandidatesValidatorRemove-perf.json  permissionedCandidatesValidatorRemove.json  permissionedCandidatesValidatorUpdate-perf.json  permissionedCandidatesValidatorUpdate.json  reserveAuthPolicy-perf.json  reserveAuthPolicy.json  reserveValidatorDeposit-perf.json  reserveValidatorDeposit.json  reserveValidatorHandover-perf.json  reserveValidatorHandover.json  reserveValidatorTransferToICS.json  reserveValidatorUpdate-perf.json  reserveValidatorUpdate.json  versioningPolicyBurn-perf.json  versioningPolicyBurn.json  versioningPolicyInitialize-perf.json  versioningPolicyInitialize.json  versioningPolicyMint-perf.json  versioningPolicyMint.json  (+2 more)
onchain/test/quickcheck-extra-test/: Main.hs
onchain/test/roundtrip/: Laws.hs  Main.hs
onchain/test/script-perf/: CommitteeCandidateValidator.hs  DParameter.hs  GovernedMap.hs  IlliquidCirculationSupply.hs  Main.hs  PermissionedCandidates.hs  Reserve.hs  ScriptPerfUtils.hs  Size.hs  TestValues.hs  Testing.hs  Versioning.hs
onchain/test/script-size/: Compiled.hs  Legacy.hs  Main.hs  Sizer.hs
onchain/test/script-spec/: CommitteeCandidateValidator.hs  DParameter.hs  GovernedMap.hs  ICSAuthorityToken.hs  IlliquidCirculationSupply.hs  Main.hs  OnlyMintMintingPolicy.hs  PermissionedCandidates.hs  Reserve.hs  ScriptCache.hs  ScriptSpecUtils.hs  (+2 more)
(+797 files in other folders)
