cabal-version:      3.0
name:               trustless-sidechain
version:            0.1
synopsis:           TODO
description:        TODO
homepage:           https://github.com/mlabs-haskell/trustless-sidechain
bug-reports:        https://github.com/mlabs-haskell/trustless-sidechain
license:
license-file:
author:             MLabs
maintainer:         TODO
copyright:          TODO
category:           TODO
build-type:         Simple
tested-with:        GHC ==8.10.4
extra-source-files: README.md

source-repository head
  type:     git
  location: https://github.com/mlabs-haskell/trustless-sidechain

flag defer-plugin-errors
  description:
    Defer errors from the plugin, useful for things like Haddock that can't handle it.

  default:     False
  manual:      True

-- Common sections

common common-lang
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints -fobject-code
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    -fplugin-opt PlutusTx.Plugin:defer-errors -Werror

  if flag(defer-plugin-errors)
    ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

  build-depends:
    , base                     ^>=4.14
    , record-dot-preprocessor
    , record-hasfield

  default-extensions:
    NoImplicitPrelude
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances

  default-language:   Haskell2010

-- Libraries

library
  import:          common-lang
  exposed-modules:
    TrustlessSidechain.MerkleTree
    TrustlessSidechain.OffChain.Types
    TrustlessSidechain.OnChain.CommitteeCandidateValidator
    TrustlessSidechain.OnChain.DistributedSet
    TrustlessSidechain.OnChain.FUELMintingPolicy
    TrustlessSidechain.OnChain.MPTRootTokenMintingPolicy
    TrustlessSidechain.OnChain.MPTRootTokenValidator
    TrustlessSidechain.OnChain.PoCECDSA
    TrustlessSidechain.OnChain.PoCInlineDatum
    TrustlessSidechain.OnChain.PoCReferenceInput
    TrustlessSidechain.OnChain.PoCReferenceScript
    TrustlessSidechain.OnChain.PoCSerialiseData
    TrustlessSidechain.OnChain.Types
    TrustlessSidechain.OnChain.UpdateCommitteeHash
    TrustlessSidechain.OnChain.Utils

  build-depends:
    , aeson                ^>=1.5.0.0
    , base16-bytestring
    , bytestring           ^>=0.10.12.0
    , cardano-api
    , cardano-crypto
    , deepseq
    , playground-common
    , plutus-core
    , plutus-ledger
    , plutus-ledger-api
    , plutus-script-utils
    , plutus-tx
    , plutus-tx-plugin
    , serialise

  hs-source-dirs:  src

executable trustless-sidechain-gen-signatures
  import:         common-lang
  main-is:        Main.hs
  build-depends:
    , attoparsec
    , base16-bytestring
    , bytestring
    , cardano-crypto-class
    , either
    , optparse-applicative
    , plutus-core
    , plutus-ledger
    , plutus-ledger-api
    , plutus-tx
    , secp256k1-haskell
    , text
    , trustless-sidechain

  hs-source-dirs: app/gen-signatures

executable trustless-sidechain-serialise
  import:         common-lang
  main-is:        Main.hs
  build-depends:
    , bytestring
    , cardano-api
    , plutus-ledger
    , serialise
    , trustless-sidechain

  hs-source-dirs: app/serialise

executable trustless-sidechain-merkle-tree
  import:         common-lang
  main-is:        Main.hs
  build-depends:
    , bytestring
    , optparse-applicative
    , plutus-ledger
    , plutus-tx
    , serialise
    , trustless-sidechain

  hs-source-dirs: app/merkle-tree

test-suite trustless-sidechain-test
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:
    Test.TrustlessSidechain.MerkleTree
    Test.TrustlessSidechain.MultiSig

  ghc-options:    -Wall -threaded -rtsopts
  build-depends:
    , bytestring
    , plutus-core
    , plutus-tx
    , QuickCheck
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , trustless-sidechain

  hs-source-dirs: test
