cabal-version: 3.0
name:          trustless-sidechain
version:       7.2.2
synopsis:      Smart contract code used by the partner-chains project.
homepage:
  https://github.com/input-output-hk/partner-chains-smart-contracts

bug-reports:
  https://github.com/input-output-hk/partner-chains-smart-contracts

license:       Apache-2.0
author:        Michal Jankun, Krisztian Pinter
maintainer:    Michal Jankun, Krisztian Pinter
copyright:     (c) 2022-2025 IOG
build-type:    Simple

source-repository head
  type:     git
  location:
    https://github.com/input-output-hk/partner-chains-smart-contracts

-- Common sections

common common-lang
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints -fplugin-opt
    PlutusTx.Plugin:target-version=1.0.0

  build-depends:      base
  default-extensions:
    BangPatterns
    BinaryLiterals
    BlockArguments
    DataKinds
    DeriveTraversable
    DerivingVia
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    NoStarIsType
    NumericUnderscores
    OverloadedStrings
    PackageImports
    PatternSynonyms
    RebindableSyntax
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    ViewPatterns

  default-language:   Haskell2010

common common-lang-optimized-notrace
  import:      common-lang
  ghc-options:
    -fplugin-opt PlutusTx.Plugin:remove-trace -fplugin-opt
    PlutusTx.Plugin:optimize

common common-lang-traced
  import:      common-lang
  ghc-options: -fplugin-opt PlutusTx.Plugin:preserve-logging

common common-script-lang
  ghc-options:
    -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas -fplugin-opt
    PlutusTx.Plugin:defer-errors

common common-optimized
  ghc-options: -O2

common common-optimized-parallel
  import:      common-optimized
  ghc-options: -threaded -rtsopts -with-rtsopts=-N

common common-other-modules
  other-modules:
    TrustlessSidechain.AlwaysFailingScripts
    TrustlessSidechain.AlwaysPassingScripts
    TrustlessSidechain.CommitteeCandidateValidator
    TrustlessSidechain.DParameter
    TrustlessSidechain.ExampleVFunction
    TrustlessSidechain.Governance.MultiSig
    TrustlessSidechain.GovernedMap
    TrustlessSidechain.IlliquidCirculationSupply
    TrustlessSidechain.OnlyMintMintingPolicy
    TrustlessSidechain.PermissionedCandidates
    TrustlessSidechain.Reserve
    TrustlessSidechain.ScriptCache
    TrustlessSidechain.ScriptId
    TrustlessSidechain.Types
    TrustlessSidechain.Utils
    TrustlessSidechain.Versioning

-- Libraries

library
  import:          common-lang, common-script-lang
  exposed-modules:
    TrustlessSidechain.AlwaysFailingScripts
    TrustlessSidechain.AlwaysPassingScripts
    TrustlessSidechain.CommitteeCandidateValidator
    TrustlessSidechain.DParameter
    TrustlessSidechain.ExampleVFunction
    TrustlessSidechain.Governance.MultiSig
    TrustlessSidechain.GovernedMap
    TrustlessSidechain.IlliquidCirculationSupply
    TrustlessSidechain.OnlyMintMintingPolicy
    TrustlessSidechain.PermissionedCandidates
    TrustlessSidechain.Reserve
    TrustlessSidechain.ScriptCache
    TrustlessSidechain.ScriptId
    TrustlessSidechain.Types
    TrustlessSidechain.Utils
    TrustlessSidechain.Versioning

  build-depends:
    , base16-bytestring
    , bytestring
    , cardano-api
    , plutus-ledger-api
    , plutus-shim-prelude
    , plutus-tx
    , plutus-tx-plugin
    , trustless-sidechain-prelude

  hs-source-dirs:  src

library trustless-sidechain-prelude
  import:          common-lang
  exposed-modules: TrustlessSidechain.HaskellPrelude
  build-depends:
    , bytestring
    , containers
    , indexed-traversable
    , plutus-tx
    , plutus-tx-plugin
    , semialign
    , semirings
    , tasty-quickcheck
    , text
    , these
    , vector
    , witherable

  hs-source-dirs:  prelude

library plutus-shim-prelude
  import:          common-lang, common-script-lang
  exposed-modules: TrustlessSidechain.PlutusPrelude
  hs-source-dirs:  prelude
  build-depends:
    , plutus-tx
    , plutus-tx-plugin

-- Executables

executable trustless-sidechain-serialise
  import:
    common-lang-optimized-notrace, common-lang, common-optimized-parallel, common-other-modules

  main-is:        Main.hs
  build-depends:
    , aeson
    , base16-bytestring
    , bytestring
    , cardano-api
    , casing
    , plutus-ledger-api
    , plutus-shim-prelude
    , plutus-tx
    , plutus-tx-plugin
    , trustless-sidechain-prelude

  hs-source-dirs: app/serialise src

executable trustless-sidechain-serialise-traced
  import:
    common-lang-traced, common-script-lang, common-optimized-parallel, common-other-modules

  main-is:        Main.hs
  build-depends:
    , aeson
    , base16-bytestring
    , bytestring
    , cardano-api
    , casing
    , plutus-ledger-api
    , plutus-shim-prelude
    , plutus-tx
    , plutus-tx-plugin
    , trustless-sidechain-prelude

  hs-source-dirs: app/serialise src

-- Tests

test-suite trustless-sidechain-test
  import:         common-lang, common-optimized-parallel, common-script-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:
    Test.TrustlessSidechain.Golden.Tests
    Test.TrustlessSidechain.Golden.Types
    Test.TrustlessSidechain.Golden.Versioning
    Test.TrustlessSidechain.GoldenTest

  build-depends:
    , base16-bytestring
    , bytestring
    , plutus-ledger-api
    , plutus-shim-prelude
    , plutus-tx
    , tasty
    , tasty-golden
    , text
    , trustless-sidechain
    , trustless-sidechain-prelude

  hs-source-dirs: test

test-suite script-size
  import:
    common-lang , common-lang-optimized-notrace, common-optimized-parallel , common-script-lang, common-other-modules

  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:  Sizer
  build-depends:
    , bytestring
    , cardano-api
    , plutus-core
    , plutus-ledger-api
    , plutus-shim-prelude
    , plutus-tx
    , plutus-tx-plugin
    , tagged
    , tasty
    , trustless-sidechain
    , trustless-sidechain-prelude

  hs-source-dirs: test/script-size src

test-suite roundtrip
  import:         common-lang, common-optimized-parallel
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:  Laws
  build-depends:
    , plutus-ledger-api
    , plutus-shim-prelude
    , plutus-tx
    , plutus-tx-plugin
    , QuickCheck
    , secp256k1-haskell
    , tasty
    , tasty-quickcheck
    , trustless-sidechain
    , trustless-sidechain-prelude

  hs-source-dirs: test/roundtrip

test-suite script-specs
  import:         common-lang, common-optimized-parallel, common-script-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:
    ScriptSpecUtils
    TestValues
    TrustlessSidechain.AlwaysFailingScripts
    TrustlessSidechain.AlwaysPassingScripts
    TrustlessSidechain.ScriptId
    TrustlessSidechain.Types
    TrustlessSidechain.Utils
    TrustlessSidechain.Versioning
    Versioning

  build-depends:
    , base16-bytestring
    , bytestring
    , cardano-api
    , lens
    , plutus-core
    , plutus-ledger-api
    , plutus-shim-prelude
    , plutus-tx
    , plutus-tx-plugin
    , tasty
    , tasty-hunit
    , text
    , trustless-sidechain
    , trustless-sidechain-prelude

  hs-source-dirs: test/script-spec src
